--- a/style.css
+++ b/style.css
@@ -1,22 +1,92 @@
-body { 
-	font-family: 'Lato', sans-serif;
-	font-size: 16px;
-	background-image: url("Unknown.jpeg"); 
-}
+@charset "UTF-8";
+body {
+  font-family: 'Playfair Display', serif;
+  font-size: 100%;
+  text-align: left;
+  color: #fff;
+  line-height: 175%;
+  margin: 0 10% 0;
+  background: #000000 url(images/unknown4.jpg) no-repeat 0px; 
 
-h1  {background-color: rgba(255, 0, 0, 0.3);
-	height: 200px;}
-
-h1, h2 {
-	color: purple; 
-	font-family: 'Sigmar One', cursive;
 
 }
+h1 {
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-left: 0px;
+  padding: 1em 1em 1em 1em;
+  text-align: center;
+  background-color: rgba(2,2,2,.5);
+}
 
-/* This is demonstrating how a note in code works */
+a {
+  text-decoration: none;
+}
+a:link {
+  color: #FFE26B;
+}
+a:visited {
+  color: #FFE26B;
+}
+a:focus, a:hover {
+  color: #CC960D;
+}
+a:active {
+  color: #fff;
+  background-color: #fff;
+}
 
-#appetizers p {color: green;}
+h1 {
+  font: bold 1.5em 'Playfair Display', serif;
+  text-shadow: .1em .05em .1em lightslategray;
+  color: #FFCD00;
+}
 
-.gold {color: gold;}
+h2 {
+  font: bold 0em 'Playfair Display', serif;
+  font-size: 1em;
+  text-shadow: .15em .05em .1em lightslategray;
+  text-transform: uppercase;
+  letter-spacing: .2em;
+  text-align: center;
+  color: #FFCD00;
+  margin-top: 10px;
+  margin-right: 0px;
+  margin-left: 1;
+  padding: .5em .5em .5em .5em;
+  text-align: center;
+  background-image: url(images/line.png) repeat 200px;
+}
 
-#appetizers {color: red;}
+h3 {
+  font: bold 0em 'Playfair Display', serif;
+  font-size:1em;
+  text-shadow: .1em .05em .1em lightslategray;
+  color: #ffff;
+}
+dt {
+  font-weight: bold;
+}
+strong {
+  font-style: italic;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  margin-left: 50px;
+  padding: 0;
+  text-indent: 0;
+}
+li  {
+  list-style-type: disc;
+  text-indent: 0;
+  margin: 0;
+  padding: 0;
+}
+
+
+h2 + p {
+  text-align: center;
+  font-style: italic;
+}
+
