--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   color: #fff;
   line-height: 175%;
   margin: 0 10% 0;
-  background: #000000 url(images/unknown4.jpg) no-repeat 0px; 
+  background: #000000 url(unknown4.jpg) no-repeat 0px; 
 
 
 }
